--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Customer', new_customer_path %>
+<%= link_to 'New Customer', new_customer_path, class: 'btn btn-primary' %>
