--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require bootstrap/dist/css/bootstrap.min.css
  *= require_tree .
  *= require_self
  */
+
+@import 'admin-lte/plugins/fontawesome-free/css/all.min';
+@import 'admin-lte/dist/css/adminlte.min';
