--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 3 | Collapsed Sidebar</title>
+  <title>COSMOS</title>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -11,15 +11,20 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_pack_tag 'application' %>
 
-  <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini sidebar-collapse">
-<!-- Site wrapper -->
+
 <div class="wrapper">
+
+  <%= render '/layouts/header' %>
+
+  <%= render '/layouts/main_sidebar' %>
+
   <%= yield %>
+
+  <%= render '/layouts/main_footer' %>
 </div>
 <!-- ./wrapper -->
 </body>
