--- a/app/views/layouts/_main_footer.html.erb
+++ b/app/views/layouts/_main_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="main-footer">
-  <!-- To the right -->
+
   <div class="float-right d-none d-sm-inline">
-    Anything you want
+    お知らせ
   </div>
-  <!-- Default to the left -->
+
   <strong>Copyright &copy; 2020-2020 <a href="http://futurenet.co.jp"></a>Futurenet.co</strong> All rights reserved.
 </footer>
