--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_pack_tag 'application' %>
+  <%= yield(:page_javascript) if content_for?(:page_javascript) %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
@@ -26,6 +27,6 @@
 
   <%= render '/layouts/main_footer' %>
 </div>
-<!-- ./wrapper -->
+
 </body>
 </html>
