本番環境でのprecompileエラー対応

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,5 @@
  *= require_self
  */
 
-@import 'admin-lte/plugins/fontawesome-free/css/all.min';
-@import 'admin-lte/dist/css/adminlte.min';
+@import 'admin-lte/plugins/fontawesome-free/css/all.min.css';
+@import 'admin-lte/dist/css/adminlte.min.css';
