--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= stylesheet_pack_tag 'application', media: 'all' %>
   <%= javascript_pack_tag 'application' %>
   <%= yield(:page_javascript) if content_for?(:page_javascript) %>
 
