画像をwebpackに含めた

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         <a href="#" class="dropdown-item">
 
           <div class="media">
-            <img src="<%= image_path 'user1-128x128.jpg'%>" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+            <img src="<%= asset_pack_path 'media/images/user1-128x128.jpg'%>" alt="User Avatar" class="img-size-50 mr-3 img-circle">
             <div class="media-body">
               <h3 class="dropdown-item-title">
                 Brad Diesel
@@ -39,7 +39,7 @@
         <a href="#" class="dropdown-item">
 
           <div class="media">
-            <img src="<%= image_path 'user8-128x128.jpg'%>" alt="User Avatar" class="img-size-50 img-circle mr-3">
+            <img src="<%= asset_pack_path 'media/images/user8-128x128.jpg'%>" alt="User Avatar" class="img-size-50 img-circle mr-3">
             <div class="media-body">
               <h3 class="dropdown-item-title">
                 John Pierce
@@ -55,7 +55,7 @@
         <a href="#" class="dropdown-item">
 
           <div class="media">
-            <img src="<%= image_path 'user3-128x128.jpg'%>" alt="User Avatar" class="img-size-50 img-circle mr-3">
+            <img src="<%= asset_pack_path 'media/images/user3-128x128.jpg'%>" alt="User Avatar" class="img-size-50 img-circle mr-3">
             <div class="media-body">
               <h3 class="dropdown-item-title">
                 Nora Silvester
