--- a/app/views/layouts/_main_sidebar.html.erb
+++ b/app/views/layouts/_main_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside class="main-sidebar sidebar-light-lightblue elevation-4">
 
   <a href="/" class="brand-link">
-    <img src="<%= image_path 'logo.png'%>" alt="COSMOS Logo" class="brand-image img-circle elevation-3"
+    <img src="<%= asset_pack_path 'media/images/logo.png'%>" alt="COSMOS Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
     <span class="brand-text font-weight-light">COSMOS</span>
   </a>
@@ -10,7 +10,7 @@
 
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-        <img src="<%= image_path 'user-icon.png'%>" class="img-circle elevation-2" alt="<%= current_user.try(:email) %>">
+        <img src="<%= asset_pack_path 'media/images/user-icon.png'%>" class="img-circle elevation-2" alt="<%= current_user.try(:email) %>">
       </div>
       <div class="info">
         <a href="#" class="d-block"><%= current_user.try(:email) %></a>
