--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -7,7 +7,7 @@
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="/">ホーム</a></li>
+            <li class="breadcrumb-item"><a href="<%= homes_path(company_code: params[:company_code]) %>">ホーム</a></li>
             <li class="breadcrumb-item active">顧客</li>
           </ol>
         </div>
