--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="/" class="nav-link">ホーム</a>
+      <a href="<%= homes_path(company_code: params[:company_code]) %>" class="nav-link">ホーム</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a href="<%= customers_path %>" class="nav-link">顧客</a>
