--- a/app/views/layouts/_main_sidebar.html.erb
+++ b/app/views/layouts/_main_sidebar.html.erb
@@ -1,6 +1,6 @@
 <aside class="main-sidebar sidebar-light-lightblue elevation-4">
 
-  <a href="/" class="brand-link">
+  <a href="<%= homes_path(company_code: params[:company_code]) %>" class="brand-link">
     <img src="<%= asset_pack_path 'media/images/logo.png'%>" alt="COSMOS Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
     <span class="brand-text font-weight-light">COSMOS</span>
