--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Customer</h1>
-
-<%= render 'form', customer: @customer %>
-
-<%= link_to 'Back', customers_path %>
+<div class="content-wrapper">
+  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::NEW %>
+  <%= render 'form', customer: @customer %>
+</div>
