--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -34,8 +34,11 @@
       </div>
 
       <div class="card-footer clearfix">
-        <%= link_to 'Edit', edit_customer_path(@customer) %> |
-        <%= link_to 'Back', customers_path %>
+        <% if @customer.line? %>
+          <%= link_to 'LINE通知', new_line_message_customer_path(@customer, company_code: @company.code) %> |
+        <% end %>
+        <%= link_to 'Edit', edit_customer_path(@customer, company_code: @company.code) %> |
+        <%= link_to 'Back', customers_path(company_code: @company.code) %>
       </div>
     </div>
   </section>
