--- a/app/views/customers/_form_line.html.erb
+++ b/app/views/customers/_form_line.html.erb
@@ -11,6 +11,7 @@
 
 
           <%= form_with(model: line_message, url: send_line_message_customer_path(customer, company_code: @company.code),local: true) do |form| %>
+            <%= form.hidden_field :user_id %>
             <div class="card-body">
               <div class="form-group">
                 <%= form.label :message %>
