パンくずリスト調整

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::SHOW %>
+  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::CUSTOMER_SHOW %>
 
   <section class="content">
     <div class="card">
