--- a/app/views/customers/_form_line.html.erb
+++ b/app/views/customers/_form_line.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div class="card card-primary">
+        <div class="card card-success">
           <div class="card-header">
             <h3 class="card-title">TO: <%= customer.name %><small></small></h3>
           </div>
