--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::INDEX %>
+  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::CUSTOMER_INDEX %>
 
   <section class="content">
     <div class="card">
