--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,5 +1,21 @@
 <div class="content-wrapper">
-  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::CUSTOMER_SHOW %>
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0 text-dark"><%= Const::View::Name::CUSTOMER_SHOW %></h1>
+        </div>
+
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a href="<%= homes_path(company_code: params[:company_code]) %>">ホーム</a></li>
+            <li class="breadcrumb-item"><a href="<%= customers_path(company_code: @company.code) %>"><%= Const::View::Name::CUSTOMER_INDEX %></a></li>
+            <li class="breadcrumb-item active"><%= Const::View::Name::CUSTOMER_SHOW %></li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <section class="content">
     <div class="card">
