顧客編集・更新処理

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -7,7 +7,7 @@
             <h3 class="card-title">登録情報を入力してください。 <small></small></h3>
           </div>
 
-          <%= form_with(model: customer, local: true) do |form| %>
+          <%= form_with(model: customer, url: url, local: true) do |form| %>
             <div class="card-body">
 
               <div class="form-group">
