--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-  <%= render 'content_header', active_breadcrumb_item: Const::View::Name::CUSTOMER_INDEX %>
+  <%= render 'content_header', active_breadcrumb_item: @company.name %>
 
   <section class="content">
     <div class="container-fluid">
