ボタン位置調整

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -50,11 +50,11 @@
       </div>
 
       <div class="card-footer clearfix">
+        <a href="<%= edit_customer_path(@customer, company_code: @company.code ) %>" class="btn btn-sm btn-info float-left mr-2">　編集　</a>
         <% if @customer.line? %>
-          <%= link_to 'LINE通知', new_line_message_customer_path(@customer, company_code: @company.code) %> |
+          <%= link_to 'LINE通知', new_line_message_customer_path(@customer, company_code: @company.code), class: 'btn btn-sm btn-success float-left' %>
         <% end %>
-        <a href="<%= edit_customer_path(@customer, company_code: @company.code ) %>" class="btn btn-sm btn-info float-left">編集</a>
-        <a href="<%= customers_path(company_code: @company.code) %>" class="btn btn-sm btn-default float-right">戻る</a>
+        <a href="<%= customers_path(company_code: @company.code) %>" class="btn btn-sm btn-default float-right">　戻る　</a>
       </div>
     </div>
   </section>
