--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>COSMOS</title>
+  <title>COSMOS-s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="XXXXX" />
   <meta name="keywords" content="YYYY" />
@@ -49,7 +49,7 @@
     <header id="root-header" role="banner">
       <div class="container">
         <div class="header-inner">
-          <h1><i></i><a href="#">COSMOS</a></h1>
+          <h1><i></i><a href="#">COSMOS-s</a></h1>
         </div>
       </div>
     </header>
