--- a/app/views/public/homes/index_for_tenant_promotion.html.erb
+++ b/app/views/public/homes/index_for_tenant_promotion.html.erb
@@ -1,1 +1,25 @@
-広告
+<div id="root-blog-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-md-offset-3 text-center root-heading">
+        <h2><%= @company.name %></h2>
+        <p><span>
+          <a href="<%= new_user_session_path(@company.code) %>" class="btn btn-primary btn-outline">To Login<i class="icon-arrow-right"></i></a>
+        </span></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="blog-inner">
+          <br />ユーザー登録はLINEチャネルから
+          <div class="desc">
+            <h3>LINE QR CODE</h3>
+            <p><img class="img-responsive" src="/images/line_qr_demo.png" alt="Demo"></p>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
