--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -6,7 +6,9 @@
       <div class="row">
         <div class="col-12 col-sm-6 col-md-3">
           <div class="info-box mb-3">
-            <span class="info-box-icon bg-info elevation-1"><i class="fas fa-users"></i></span>
+            <span class="info-box-icon bg-info elevation-1">
+              <a href="<%= customers_path(params[:company_code]) %>"><i class="fas fa-users"></i></a>
+            </span>
 
             <div class="info-box-content">
               <span class="info-box-text">顧客数</span>
