--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -43,7 +43,7 @@
               <td><%= @customer.tel_number.to_s %></td>
             </tr><tr>
               <th class="text-nowrap"><%= Customer.human_attribute_name(:birthday) %></th>
-              <td><%= @customer.birthday.to_s %></td>
+              <td><%= @customer.birthday.strftime("%Y年%m月%d日") if @customer.birthday %></td>
             </tr>
           </tbody>
         </table>
