--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -28,7 +28,7 @@
                 <td><%= customer.name.to_s %></td>
                 <td><%= customer.name_kana.to_s %></td>
                 <td><%= Customer.human_attribute_name("gender.#{ customer.gender }") if customer.gender %></td>
-                <td><%= customer.tel_number.to_s %></td>
+                <td><%= customer.formatted_tel_number.to_s %></td>
                 <td><%= customer.birthday.strftime("%Y年%m月%d日") if customer.birthday %></td>
                 <td></td>
               </tr>
