電話番号入力補助

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -52,17 +52,36 @@
                 <%= form.label :tel_number, { class: "#{ tel_number_err ? 'is-invalid' : '' }" } %>
                 <div class="form-row align-items-center">
                   <div class="col">
-                    <%= form.text_field :tel_number1, { maxlength:3, class: "form-control #{ tel_number_err ? 'is-invalid' : '' }" } %>
+                    <%= form.telephone_field :tel_number1, {
+                      maxlength:3,
+                      class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
+                      onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number2', 3)"
+                    } %>
                   </div>
                   <div class="col">
-                    <%= form.text_field :tel_number2, { maxlength:4, class: "form-control #{ tel_number_err ? 'is-invalid' : '' }" } %>
+                    <%= form.telephone_field :tel_number2, {
+                      maxlength:4,
+                      class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
+                      onKeyup: "this.value=this.value.replace(/[^0-9]+/i,''); nextField(this, 'customer_tel_number3', 4)"
+                    } %>
                   </div>
                   <div class="col">
-                    <%= form.text_field :tel_number3, { maxlength:4, class: "form-control #{ tel_number_err ? 'is-invalid' : '' }" } %>
+                    <%= form.telephone_field :tel_number3, {
+                      maxlength:4,
+                      class: "form-control #{ tel_number_err ? 'is-invalid' : '' }",
+                      onKeyup: "this.value=this.value.replace(/[^0-9]+/i,'')"
+                    } %>
                   </div>
                 </div>
                 <span class="error invalid-feedback"><%= customer.errors.full_messages_for(:tel_number).first %></span>
               </div>
+              <script type="text/javascript">
+              function nextField(i, n, m) {
+                if (i.value.length >= m) {
+                  i.form.elements[n].focus();
+                }
+              }
+              </script>
 
               <div class="form-group">
                 <%= form.label :birthday %>
